@@ -90,10 +90,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-               <!-- <configuration>
+                <configuration>
                     <source>14</source>
                     <target>14</target>
-                </configuration>-->
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+                <!-- <configuration>
+                     <source>14</source>
+                     <target>14</target>
+                 </configuration>-->
             </plugin>
         </plugins>
     </build>
